--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>WILLIAM CHAMBERS</title>
+    <title>William Chambers Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -20,7 +20,7 @@
       <div id="header">
         <!-- Logo -->
         <h1>William Chambers</h1>
-        <h2>Full Stack Web Developer</h2>
+        <em><h2>Full Stack Web Developer</h2></em>
 
         <!-- Nav -->
         <nav id="nav">
@@ -48,7 +48,7 @@
             <li><a href="left-sidebar.html">Left Sidebar</a></li>
             <li><a href="right-sidebar.html">Right Sidebar</a></li>
             <li><a href="two-sidebar.html">Two Sidebar</a></li>
-            <li><a href="no-sidebar.html">No Sidebar</a></li>
+            <li><a href="resume.html">Resume</a></li>
           </ul>
         </nav>
       </div>
@@ -268,28 +268,22 @@
         <!-- Icons -->
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-github"
+            <a
+              href="https://github.com/wchamber01"
+              class="icon brands fa-github"
               ><span class="label">GitHub</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-linkedin-in"
+            <a
+              href="https://www.linkedin.com/in/dev-william-chambers/"
+              class="icon brands fa-linkedin-in"
               ><span class="label">LinkedIn</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-google-plus-g"
-              ><span class="label">Google+</span></a
+            <a href="williamchambers@gmail.com" class="icon solid fa-envelope"
+              ><span class="label">Gmail</span></a
             >
           </li>
         </ul>
@@ -297,7 +291,7 @@
         <!-- Copyright -->
         <div class="copyright">
           <ul class="menu">
-            <li>&copy; Untitled. All rights reserved</li>
+            <li>&copy; William Chambers Portfolio</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
         </div>
