adjusting margins for header on home and resume pages

--- a/resume.html
+++ b/resume.html
@@ -16,23 +16,21 @@
   </head>
   <body class="is-preload">
     <div id="page-wrapper">
-      <!-- Header -->
-      <div id="header">
-        <!-- Logo -->
-        <h1>
-          <!-- <a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a> -->
-        </h1>
-
+      <!-- Banner -->
+      <section
+        id="banner"
+        style="display: flex; flex-direction: column-reverse;"
+      >
         <!-- Nav -->
         <nav id="nav">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li class="current"><a href="resume.html">Resume</a></li>
-            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">About Me</a></li>
             <li><a href="index.html">Contact</a></li>
           </ul>
         </nav>
-      </div>
+      </section>
 
       <!-- Main -->
       <section class="wrapper style1">
@@ -49,10 +47,14 @@
                   >View Resume</a
                 >
               </header>
-
-              <span class="image featured"
-                ><img src="images/banner.jpg" alt="water reflecting trees"
-              /></span>
+              <p>
+                <iframe
+                  src="https://resume.creddle.io/embed/6vcnnlpk05h"
+                  width="850"
+                  height="1100"
+                  seamless
+                ></iframe>
+              </p>
             </article>
           </div>
         </div>
