added php files to work with heroku

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <nav id="nav">
           <ul>
             <li class="current"><a href="index.html">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="index.html">About Me</a></li>
+            <li><a href="#about">About Me</a></li>
             <li><a href="#footer">Contact</a></li>
           </ul>
         </nav>
@@ -86,8 +87,13 @@
       <section class="wrapper style2">
         <div class="container">
           <header class="major">
-            <h2>A gigantic heading you can use for whatever</h2>
-            <p>With a much smaller subtitle hanging out just below it</p>
+            <h2 id="about">About Me</h2>
+            <p>
+              Python is my language of choice but I am experienced in
+              JavaScript, HTML and CSS. I have some experience configuring
+              virtual machines using VMWare and enjoy tinkering with electronics
+              and other tech.
+            </p>
           </header>
         </div>
       </section>
@@ -165,42 +171,15 @@
       <!-- CTA -->
       <section id="cta" class="wrapper style3">
         <div class="container">
-          <header>
-            <h2>Are you ready to continue your quest?</h2>
-            <a href="#" class="button">Insert Coin</a>
-          </header>
+          <header></header>
         </div>
       </section>
 
       <!-- Footer -->
-      <div id="footer">
+      <div id="footer" style="display: flex; flex-direction: column;">
         <div class="container">
           <div class="row">
-            <!-- <section class="col-3 col-6-narrower col-12-mobilep">
-              <h3>Links to Stuff</h3>
-              <ul class="links">
-                <li><a href="#">Mattis et quis rutrum</a></li>
-                <li><a href="#">Suspendisse amet varius</a></li>
-                <li><a href="#">Sed et dapibus quis</a></li>
-                <li><a href="#">Rutrum accumsan dolor</a></li>
-                <li><a href="#">Mattis rutrum accumsan</a></li>
-                <li><a href="#">Suspendisse varius nibh</a></li>
-                <li><a href="#">Sed et dapibus mattis</a></li>
-              </ul>
-            </section>
-            <section class="col-3 col-6-narrower col-12-mobilep">
-              <h3>More Links to Stuff</h3>
-              <ul class="links">
-                <li><a href="#">Duis neque nisi dapibus</a></li>
-                <li><a href="#">Sed et dapibus quis</a></li>
-                <li><a href="#">Rutrum accumsan sed</a></li>
-                <li><a href="#">Mattis et sed accumsan</a></li>
-                <li><a href="#">Duis neque nisi sed</a></li>
-                <li><a href="#">Sed et dapibus quis</a></li>
-                <li><a href="#">Rutrum amet varius</a></li>
-              </ul>
-            </section> -->
-            <section class="col-6 col-12-narrower">
+            <section class="col-6 col-12-narrower" style="margin: auto;">
               <h3>Get In Touch</h3>
               <form method="post" action="acknowledge.php">
                 <div class="row gtr-50">
