--- a/resume.html
+++ b/resume.html
@@ -25,6 +25,7 @@
         <nav id="nav" style="background-color: rgba(51, 51, 51, 0.9);">
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html#projects">Projects</a></li>
             <li class="current"><a href="resume.html">Resume</a></li>
             <li><a href="/index.html#about">About Me</a></li>
             <li><a href="/index.html#footer">Contact</a></li>
@@ -39,30 +40,36 @@
             <!-- Content -->
             <article>
               <header>
-                <h2>Resume</h2>
+                <h2 style="margin: 0;">Resume</h2>
                 <a
                   href="https://resume.creddle.io/resume/6vcnnlpk05h"
                   class="button"
+                  style="margin-bottom: 1em;"
                   >View Resume</a
                 >
               </header>
-              <div
-                style="
-									background-color: #333;
-									width:auto;
-									height: auto
-                  border-radius: 5px;
-                  <!-- display: flex; -->
-                  <!-- align-items: center; -->
-                "
-              >
-                <!-- src=https://resume.creddle.io/embed/6vcnnlpk05h -->
-                <iframe
-									img src=/images/resume-creddle-io-2020-06-23-14_14_39.jpg
-                  width="850"
-                  height="1100"
-                  seamless
-                ></iframe>
+              <div style="text-align: center; display: flex;">
+                <div
+                  style="
+                    background-color: #333;
+                    width: 1200px;
+                    height: 1510px;
+                    border-radius: 3px;
+                    text-align: center;
+                    padding-top: auto;
+                    display: flex;
+                    vertical-align: middle;
+                    margin: auto;
+                  "
+                >
+                  <img
+                    style="margin: auto;"
+                    width="1130"
+                    height="1440"
+                    img
+                    src="/images/resume-capture-edit.jpg"
+                  />
+                </div>
               </div>
             </article>
           </div>
@@ -70,7 +77,7 @@
       </section>
 
       <!-- Footer -->
-      <div id="footer">
+      <div id="footer" style="padding: 2em 0 2em 0;">
         <div class="container">
           <div class="row">
             <!-- <section class="col-3 col-6-narrower col-12-mobilep">
