added pictures and finalizd design and data

--- a/index copy.html
+++ b/index copy.html
@@ -42,70 +42,41 @@
         <!-- </header> -->
       </section>
 
-      <!-- Posts -->
-      <section class="wrapper style1" id="projects">
+      <!-- Highlights -->
+      <section class="wrapper style1">
         <div class="container">
-          <div class="row">
-            <section class="col-6 col-12-narrower">
-              <div class="box post">
-                <a href="#" class="image left"
-                  ><img src="images/allay.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h3>Allay</h3>
-                  <p>
-                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
-                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
-                    Suspendisse eu.
-                  </p>
-                </div>
+          <div class="row gtr-200">
+            <section class="col-4 col-12-narrower">
+              <div class="box highlight">
+                <i class="icon solid major fa-paper-plane"></i>
+                <h3>This Is Important</h3>
+                <p>
+                  Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
+                  dapibus nisl amet mattis, sed a rutrum accumsan sed.
+                  Suspendisse eu.
+                </p>
               </div>
             </section>
-            <section class="col-6 col-12-narrower">
-              <div class="box post">
-                <a href="#" class="image left"
-                  ><img src="images/foodtruck-trackr.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h3>Food Truck Trackr</h3>
-                  <p>
-                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
-                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
-                    Suspendisse eu.
-                  </p>
-                </div>
+            <section class="col-4 col-12-narrower">
+              <div class="box highlight">
+                <i class="icon solid major fa-pencil-alt"></i>
+                <h3>Also Important</h3>
+                <p>
+                  Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
+                  dapibus nisl amet mattis, sed a rutrum accumsan sed.
+                  Suspendisse eu.
+                </p>
               </div>
             </section>
-          </div>
-          <div class="row">
-            <section class="col-6 col-12-narrower">
-              <div class="box post">
-                <a href="#" class="image left"
-                  ><img src="images/kidsfly.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h3>KidsFly</h3>
-                  <p>
-                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
-                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
-                    Suspendisse eu.
-                  </p>
-                </div>
-              </div>
-            </section>
-            <section class="col-6 col-12-narrower">
-              <div class="box post">
-                <a href="#" class="image left"
-                  ><img src="images/replate.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h3>REPLATE</h3>
-                  <p>
-                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
-                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
-                    Suspendisse eu.
-                  </p>
-                </div>
+            <section class="col-4 col-12-narrower">
+              <div class="box highlight">
+                <i class="icon solid major fa-wrench"></i>
+                <h3>Probably Important</h3>
+                <p>
+                  Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
+                  dapibus nisl amet mattis, sed a rutrum accumsan sed.
+                  Suspendisse eu.
+                </p>
               </div>
             </section>
           </div>
@@ -119,41 +90,78 @@
             <h2 id="about">About Me</h2>
             <p>
               Python is my language of choice but I am experienced in
-              JavaScript, HTML and CSS.
+              JavaScript, HTML and CSS. I have some experience configuring
+              virtual machines using VMWare and enjoy tinkering with electronics
+              and other tech.
             </p>
           </header>
         </div>
       </section>
 
-      <!-- Highlights -->
+      <!-- Posts -->
       <section class="wrapper style1">
         <div class="container">
-          <div class="row gtr-200">
-            <section class="col-4 col-12-narrower">
-              <div class="box highlight">
-                <i class="icon solid major fa-code"></i>
-                <h3>Programming in</h3>
-                <p>
-                  JavaScript, Python, HTML, <br>CSS, C++, Visual Basic
-                </p>
+          <div class="row">
+            <section class="col-6 col-12-narrower">
+              <div class="box post">
+                <a href="#" class="image left"
+                  ><img src="images/pic01.jpg" alt=""
+                /></a>
+                <div class="inner">
+                  <h3>The First Thing</h3>
+                  <p>
+                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
+                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
+                    Suspendisse eu.
+                  </p>
+                </div>
               </div>
             </section>
-            <section class="col-4 col-12-narrower">
-              <div class="box highlight">
-                <i class="icon solid major fa-trophy"></i>
-                <h3>My Greatest Strength</h3>
-                <p>
-                  My greatest strength is that I am a problem solver. I am always looking for ways to make things better / more effecient. I look for chances to analyze things and learn about the functionality and history behid it.
-                </p>
+            <section class="col-6 col-12-narrower">
+              <div class="box post">
+                <a href="#" class="image left"
+                  ><img src="images/pic02.jpg" alt=""
+                /></a>
+                <div class="inner">
+                  <h3>The Second Thing</h3>
+                  <p>
+                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
+                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
+                    Suspendisse eu.
+                  </p>
+                </div>
               </div>
             </section>
-            <section class="col-4 col-12-narrower">
-              <div class="box highlight">
-                <i class="icon solid major fa-wrench"></i>
-                <h3>Other Skills</h3>
-                <p>
-                  Git & Github, Slack, React.js, Redux, Node.js, Express.js, PostgreSQL, SQLite, Microsoft Active Directory, VMware, Docker, network administration, IT helpdesk experience
-                </p>
+          </div>
+          <div class="row">
+            <section class="col-6 col-12-narrower">
+              <div class="box post">
+                <a href="#" class="image left"
+                  ><img src="images/pic03.jpg" alt=""
+                /></a>
+                <div class="inner">
+                  <h3>The Third Thing</h3>
+                  <p>
+                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
+                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
+                    Suspendisse eu.
+                  </p>
+                </div>
+              </div>
+            </section>
+            <section class="col-6 col-12-narrower">
+              <div class="box post">
+                <a href="#" class="image left"
+                  ><img src="images/pic04.jpg" alt=""
+                /></a>
+                <div class="inner">
+                  <h3>The Fourth Thing</h3>
+                  <p>
+                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
+                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
+                    Suspendisse eu.
+                  </p>
+                </div>
               </div>
             </section>
           </div>
@@ -172,7 +180,53 @@
         id="footer"
         style="display: flex; flex-direction: column; padding-bottom: 4em;"
       >
-        <div style="margin: auto;"><h3 style="color:#999">Connect with me on</ style="color:#474747"></div>
+        <!-- <div class="container">
+          <div class="row">
+            <section class="col-6 col-12-narrower" style="margin: auto;">
+              <h3>Get In Touch</h3>
+              <form method="post" action="mail.php">
+                <div class="row gtr-50">
+                  <div class="col-6 col-12-mobilep">
+                    <input
+                      type="text"
+                      name="name"
+                      id="name"
+                      placeholder="Name"
+                    />
+                  </div>
+                  <div class="col-6 col-12-mobilep">
+                    <input
+                      type="email"
+                      name="email"
+                      id="email"
+                      placeholder="myemail@domain.com"
+                    />
+                  </div>
+                  <div class="col-12">
+                    <textarea
+                      name="message"
+                      id="message"
+                      placeholder="Greetings William,"
+                      rows="5"
+                    ></textarea>
+                  </div>
+                  <div class="col-12">
+                    <ul class="actions">
+                      <li>
+                        <input
+                          type="submit"
+                          class="button alt"
+                          name="send"
+                          value="Send Message"
+                        />
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </form>
+            </section>
+          </div>
+        </div> -->
 
         <!-- Icons -->
         <ul class="icons">
