--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
             <li><a href="/index.html#projects">Projects</a></li>
             <li class="current"><a href="resume.html">Resume</a></li>
             <li><a href="/index.html#about">About Me</a></li>
-            <li><a href="/index.html#footer">Contact</a></li>
+            <li><a href="/index.html#footer">Connect</a></li>
           </ul>
         </nav>
       </section>
