fixed projects and about link

--- a/index.html
+++ b/index.html
@@ -36,15 +36,18 @@
 
       <!-- Banner -->
       <section id="banner">
-        <!-- <header> -->
-        <!-- <h2>Full Stack Web Developer</h2> -->
-        <!-- <a href="#" class="button">Learn More</a> -->
-        <!-- </header> -->
+        <!-- <header>
+        <h2>Full Stack Web Developer</h2>
+        <a href="#" class="button">Learn More</a>
+       </header> -->
       </section>
 
       <!-- Posts -->
       <section class="wrapper style1" id="projects">
         <div class="container">
+          <header class="major">
+            <h2 id="projects">Projects</h2>
+          </header>
           <div class="row">
             <section class="col-6 col-12-narrower">
               <div class="box post">
