added outline to project images

--- a/index.html
+++ b/index.html
@@ -39,80 +39,102 @@
         <!-- <header>
         <h2>Full Stack Web Developer</h2>
         <a href="#" class="button">Learn More</a>
-       </header> -->
+        </header> -->
       </section>
 
       <!-- Posts -->
       <section class="wrapper style1" id="projects">
-        <div class="container">
-          <header class="major">
-            <h2 id="projects">Projects</h2>
-          </header>
-          <div class="row">
-            <section class="col-6 col-12-narrower">
-              <div class="box post">
-                <a href="#" class="image left"
-                  ><img src="images/allay.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h3>Allay</h3>
-                  <p>
-                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
-                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
-                    Suspendisse eu.
-                  </p>
+        <!-- <div class="bg-modal"> -->
+          <div class="container">
+            <header class="major">
+              <h2>Projects</h2>
+            </header>
+            <div class="row">
+              <section class="col-6 col-12-narrower" id="project">
+                <div class="box post">
+                  <a href="https://labs21-allay-fe.herokuapp.com/" class="image left"
+                    ><img src="images/allay.jpg" style="cursor:pointer; border-color:rgba(71, 71, 71, 0.3); border-width:1px; border-style:solid"  alt=""
+                    /></a>
+                    <div class="edit"><a href="#"></a><i class="fa fa-eye"></i></div>
+                    <div class="inner">
+                      <h3>Allay</h3>
+                      <p>
+                        A platform that provides Lambda School students candid company or interview reviews from alumni to aid students in their job search.<br>• Tech Stack: React | Redux | Chakra UI | Node.js | Express | Knex | PostgreSQL | Okta<br>• Built to the specifications of our stakeholder<br>• Researched and created a database containing approximately 120,000 US companies
+                      </p>
+                      <a
+                  href="https://github.com/Replate-Lambda-BuildWeeks/Replate-HTML"
+                  class="button"
+                  style="margin-bottom: 1em;"
+                  >View GitHub</a
+                >
+                  </div>
                 </div>
-              </div>
-            </section>
-            <section class="col-6 col-12-narrower">
-              <div class="box post">
-                <a href="#" class="image left"
-                  ><img src="images/foodtruck-trackr.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h3>Food Truck Trackr</h3>
-                  <p>
-                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
-                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
-                    Suspendisse eu.
-                  </p>
+              </section>
+              <section class="col-6 col-12-narrower">
+                <div class="box post">
+                  <a href="https://foodtruck-trackr-marketing.netlify.app/index.html" class="image left"
+                    ><img src="images/foodtruck-trackr.jpg" style="cursor:pointer; border-color:rgba(71, 71, 71, 0.3); border-width:1px; border-style:solid" alt=""
+                  /></a>
+                  <div class="edit"><i class="fa fa-eye"></i></div>
+                  <div class="inner">
+                    <h3>Food Truck Trackr</h3>
+                    <p>
+                      A Build Week project that allows users to locate and follow their favorite food trucks.<br>• Tech Stack: React | Redux | Axios | Formik | Yup<br>• Developed the registration and login forms and pages<br>• Collaborated with a team of developers to complete the project based on provided design structure
+                    </p>
+                    <a
+                  href="https://github.com/food-truck-trackr/front-end"
+                  class="button"
+                  style="margin-bottom: 1em;"
+                  >View GitHub</a
+                >
+                  </div>
                 </div>
-              </div>
-            </section>
+              </section>
+            </div>
+            <div class="row">
+              <section class="col-6 col-12-narrower">
+                <div class="box post">
+                  <a href="https://buildweek-kidsfly-pg.github.io/UI/" class="image left"
+                    ><img src="images/kidsfly.jpg" style="cursor:pointer; border-color:rgba(71, 71, 71, 0.3); border-width:1px; border-style:solid" alt=""
+                  /></a>
+                  <div class="edit"><i class="fa fa-eye"></i></div>
+                  <div class="inner">
+                    <h3>KidsFly</h3>
+                    <p>
+                      A Build Week project created to connect customers traveling with kids with a certified assistant that will help get the customers from curbside to the gate.<br>• Tech Stack: Node.js | Express | Knex | Jest<br>• Developed the database and backend structure<br>• Met daily with remote team of developers to discuss progress and deadlines
+                    </p>
+                    <a
+                  href="https://github.com/buildweek-kidsFly-pg/backend"
+                  class="button"
+                  style="margin-bottom: 1em;"
+                  >View GitHub</a
+                >
+                  </div>
+                </div>
+              </section>
+              <section class="col-6 col-12-narrower">
+                <div class="box post">
+                  <a href="https://replate-html-64fgit3sf.now.sh/" class="image left"
+                    ><img src="images/replate.jpg" style="cursor:pointer; border-color:rgba(71, 71, 71, 0.3); border-width:1px; border-style:solid"  alt=""
+                  /></a>
+                  <div class="edit"><i class="fa fa-eye"></i></div>
+                  <div class="inner">
+                    <h3>REPLATE</h3>
+                    <p>
+                      A Build Week project designed to facilitate the  distribution of excess prepared foods by restaurants and/or catered events with those in need of food.<br>• Tech Stack: JavaScript | HTML5 | CSS<br>• Designed and executed marketing/home page<br>• Contributed to daily remote meetings with development team
+                    </p>
+                    <a
+                  href="https://github.com/Replate-Lambda-BuildWeeks/Replate-HTML"
+                  class="button"
+                  style="margin-bottom: 1em;"
+                  >View GitHub</a
+                >
+                  </div>
+                </div>
+              </section>
+            </div>
           </div>
-          <div class="row">
-            <section class="col-6 col-12-narrower">
-              <div class="box post">
-                <a href="#" class="image left"
-                  ><img src="images/kidsfly.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h3>KidsFly</h3>
-                  <p>
-                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
-                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
-                    Suspendisse eu.
-                  </p>
-                </div>
-              </div>
-            </section>
-            <section class="col-6 col-12-narrower">
-              <div class="box post">
-                <a href="#" class="image left"
-                  ><img src="images/replate.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h3>REPLATE</h3>
-                  <p>
-                    Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et
-                    dapibus nisl amet mattis, sed a rutrum accumsan sed.
-                    Suspendisse eu.
-                  </p>
-                </div>
-              </div>
-            </section>
-          </div>
-        </div>
+        <!-- </div> -->
       </section>
 
       <!-- Gigantic Heading -->
