fixed nav bar on resume page for mobile view

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
               <h2>Projects</h2>
             </header>
             <div class="row">
-              <section class="col-6 col-12-narrower" id="project">
+              <section class="col-6 col-12-narrower">
                 <div class="box post">
                   <a href="https://labs21-allay-fe.herokuapp.com/" class="image left"
-                    ><img src="images/allay.jpg" style="cursor:pointer; border-color:rgba(71, 71, 71, 0.3); border-width:1px; border-style:solid"  alt=""
+                    ><img src="images/allay.jpg" style="cursor:pointer; border-color:rgba(71, 71, 71, 0.3); border-width:1px; border-style:solid" id="project" alt=""
                     /></a>
                     <div class="edit"><a href="#"></a><i class="fa fa-eye"></i></div>
                     <div class="inner">
