added photo and implemented email form

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
       <section class="wrapper style2">
         <div class="container">
           <header class="major">
-            <h2 id="about">About Me</h2>
+            <h2 id="about" style="margin-bottom:1%">About Me</h2>
+            <img src="./images/bw-profilephoto.jpg" width="200" height="auto" alt="Photo of William" style="margin-bottom:5%"/>
             <p>
               Python is my language of choice but I am experienced in
               JavaScript, HTML and CSS.
@@ -168,7 +169,7 @@
                 <i class="icon solid major fa-trophy"></i>
                 <h3>My Greatest Strength</h3>
                 <p>
-                  My greatest strength is that I am a problem solver. I am always looking for ways to make things better / more effecient. I look for chances to analyze things and learn about the functionality and history behid it.
+                  I am a problem solver. I am always looking for ways to make things better and/or more effecient. I look for chances to analyze things and learn about the functionality and history behid it so as to better understand it.
                 </p>
               </div>
             </section>
@@ -215,14 +216,64 @@
               ><span class="label">LinkedIn</span></a
             >
           </li>
-          <li>
+          <!-- <li>
             <a
               href="mailto:williamchambers@gmail.com"
               class="icon solid fa-envelope"
               ><span class="label">Gmail</span></a
             >
-          </li>
+          </li> -->
         </ul>
+        <div class="container">
+          <div class="row">
+            <section class="col-6 col-12-narrower" style="margin: auto;">
+              <h3 style='color:rgb(153, 153, 153); text-align:center'>or send me a message below</h3>
+              <form action="https://formspree.io/xrgyrpjp" method="POST" >
+                <div class="row gtr-50">
+                  <div class="col-6 col-12-mobilep">
+                    <input
+                      type="text"
+                      name="name"
+                      id="name"
+                      placeholder="Name"
+                    />
+                  </div>
+                  <div class="col-6 col-12-mobilep">
+                    <input
+                      type="email"
+                      name="email"
+                      id="email"
+                      placeholder="youremail@domain.com"
+                    />
+                  </div>
+                  <div class="col-12">
+                    <textarea
+                      name="message"
+                      id="message"
+                      style="resize:none"
+                      placeholder="Hello William,&#10;      Let's chat about..."
+                      rows="5"
+                      onfocus="this.placeholder = ''"
+                      onfocusout="this.placeholder = 'Hello William,\n     Let`s chat about...'"
+                    ></textarea>
+                  </div>
+                  <div class="col-12">
+                    <ul class="actions">
+                      <li>
+                        <input
+                          type="submit"
+                          class="button alt"
+                          name="send"
+                          value="Send Message"
+                        />
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </form>
+            </section>
+          </div>
+        </div>
 
         <!-- Copyright -->
         <div class="copyright">
